2009-05-13  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/Makefile.am (02_lpversion_parse_SOURCES): added
	02_lpversion_parse.txt.

	* test/01_lputil_splitstr.c: extended test to use lputil_joinstr()
	and check if the returned string is the same as the one originally
	fed to lputil_splitstr().

	* src/liblputil.c (lputil_joinstr): added string join function.

	* src/liblpatom.c (lpatom_init): fixed compile error which was
	introduced by commit d1649c56802cb5ea25a3fbec51495ab9c1a3a2e2.

	* src/liblpatom.c: fixed some lint(1) warnings.

	* src/liblpatom.c (lpatom_init): renamed symbol atom to handle.

2009-05-12  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblputil.c (lputil_splitstr): fixed buffer overflow.

2009-05-07  Lars Hartmann  <lars (at) chaotika (dot) org>

	Random Doxygen documentation updates:
	* include/archives.h: updated.
	* include/atom.h: updated.
	* include/util.h: updated
	* include/version.h: updated.
	* include/xpak.h: updated.

2009-05-06  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/03_lpatom_parse.txt: added some more tests.

	Move tests for lpversion before lpatom:
	* test/02_lpatom_parse.c: renamed to 03_lpatom_parse.c.
	* test/02_lpatom_parse.txt: renamed to 03_lpatom_parse.txt.
	* test/03_lpxpak.c: renamed to 04_lpxpak.c.
	* test/03_lpxpak.tbz2: renamed to 04_lpxpak.tbz2.
	* test/04_lparchives.c: renamed to 05_lparchives.c.
	* test/04_lparchives.tbz2: renamed to 05_lparchives.tbz2.
	* test/04_lparchives.txt: renamed to 05_lparchives.txt.
	* test/05_lpversion_parse.c: renamed to 02_lpversion_parse.c.
	* test/05_lpversion_parse.txt: renamed to 02_lpversion_parse.txt.
	* test/Makefile.am: updated.
	* test/05_lparchives.c: updated.
	* test/04_lpxpak.c: updated.
	* test/03_lpatom_parse.c: updated.
	* test/02_lpversion_parse.c: updated.

	Updated tests for lpatom:
	* test/02_lpatom_parse.txt: updated.
	* test/02_lpatom_parse.c: updated.

	Rewritten lpatom with support for lpversion:
	* include/atom.h: updated.